<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proc_planner_ros2</name>
  <version>0.1.0</version>
  <description>Node that converts waypoints into fluid Transformations.</description>
  <maintainer email="log.sonia.club@etsmtl.ca">S.O.N.I.A. Software Team</maintainer>
  <license>BSD 3-Clause License</license>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sonia_common_ros2</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
